# solana-cross-chain

./: Anchor.toml  package.json
programs/purplepay/: Cargo.toml
programs/purplepay/src/: context.rs  error.rs  lib.rs  message.rs
programs/purplepay/src/state/: config.rs  foreign_emitter.rs  message.rs  mod.rs  received.rs  wormhole_emitter.rs
tests/: purplepay.ts  utils.ts
