[package]
name = "purplepay"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "purplepay"

[features]
default = ["mainnet"]
mainnet = ["wormhole-anchor-sdk/mainnet"]
testnet = ["wormhole-anchor-sdk/solana-devnet"]
devnet = ["wormhole-anchor-sdk/tilt-devnet"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.28.0"
blake3 = "=1.3.1"
wormhole-anchor-sdk = { version = "0.1.0-alpha.2", default-features=true}
solabi = { version = "*", features = ["macros"] }
toml_datetime = "=0.6.1"
winnow = "=0.4.1"
       